<resources>
    <string name="app_name">hamsafar</string>
    <string name="intro_1_1">سفری سریع و ارزان</string>
    <string name="intro_1_2">با همسفر سریع تر و ارزان تر از همیشه سفر کنید</string>
    <string name="intro_2_1">همسفر یا شاید دوست</string>
    <string name="intro_2_2">با انتخاب همسفرهای مناسب ممکنه که دوستی های جدیدی به وجود بیاد</string>
    <string name="intro_3_1">هر کجا که باشه</string>
    <string name="intro_3_2">فرقی نمیکنه کجا باشه یا چه ساعتی باشه با همسفر شما میتونید همیشه سفر کنید</string>
    <string name="intro_4_1">آماده شروع کردن هستی؟</string>
    <string name="intro_4_2">اگه میخوای از امکانات همسفر استفاده کنی همین الان وارد برنامه شو</string>
    <string name="forgrt_it">ولش کن بابا</string>
    <string name="login">ورود</string>
    <string name="close">بستن</string>
    <string name="welcome">خوش آمدید!</string>
    <string name="for_using_app">برای استفاده از برنامه شماره تماس خود را وارد کنید</string>
    <string name="accept_rules">با ثبت نام در همسفر</string>
    <string name="accept_rules_1"><a href="http://www.google.com">شرایط و قوانین</a></string>
    <string name="accept_rules_2">را قبول میکنم</string>
    <string name="we_Send_verif">کد تایید رو براتون فرستادیم</string>
    <string name="send_again">دوباره بفرست</string>
    <string name="next">بعدی</string>
    <string name="boro_ke_raftim">برو که رفتیم</string>
    <string name="moshakhasat">مشخصات فردی</string>
    <string name="profile_photo">میتونی اینجا یه عکس برای پروفایلت بزاری</string>
    <string name="choose_alaghe">علایقتو انتخاب کن</string>
    <string name="name">نام</string>
    <string name="family">نام خانوادگی</string>
    <string name="username">نام کاربری</string>
    <string name="wait">کمی صبر کنید...</string>
    <string name="see_more">مشاهده بیشتر</string>
    <string name="suggestion">سفرهای پیشنهادی</string>
    <string name="special">سفرهای ویژه</string>
    <string name="followers">دنبال کنندگان</string>
    <string name="following">دنبال شوندگان</string>
    <string name="edit_profile">ویرایش پروفایل</string>
    <string name="travels">سفرها</string>
    <string name="search_title">پایه سفرتو پیدا کن</string>
    <string name="origin">مبداء</string>
    <string name="destination">مقصد</string>
    <string name="due_date">تاریخ حرکت</string>
    <string name="search">جستوجو</string>
    <string name="last_min">دقیقه آخری ها</string>
    <string name="lets_go">بریم ببینیم چه خبره</string>
    <string name="join_ride">همسفر شو</string>
    <string name="special_kind">ویژه</string>
    <string name="best_destination">بهترین مقصد ها</string>
    <string name="saved">ذخیره شده</string>
</resources>