<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="100dp"
        android:src="@mipmap/logup_hello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/vazir"
        android:text="@string/moshakhasat"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />


    <EditText
        android:id="@+id/logup_edittex_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/vazir"
        android:hint="@string/name"
        android:textColorHint="@color/gray_60"
        android:gravity="right|center"
        android:paddingHorizontal="20dp"
        android:background="@drawable/cardstyle3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/logup_edittex_family"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/cardstyle3"
        android:fontFamily="@font/vazir"
        android:gravity="right|center"
        android:hint="@string/family"
        android:paddingHorizontal="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_60"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logup_edittex_name" />

    <EditText
        android:id="@+id/logup_edittex_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/cardstyle3"
        android:fontFamily="@font/vazir"
        android:gravity="right|center"
        android:layout_marginTop="20dp"
        android:hint="@string/username"
        android:paddingHorizontal="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_60"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logup_edittex_family" />

</androidx.constraintlayout.widget.ConstraintLayout>