<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layoutDescription="@xml/verification_sets_scene"
    tools:context=".VerificationSets">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/vazir"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/vazir"
        android:text="@string/for_using_app"
        android:textColor="@color/gray_60"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <LinearLayout
        android:id="@+id/linearLayout_phone"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/cardstyle4"
        android:contentDescription="no"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <TextView
            android:id="@+id/edittext_phosdne"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/vazir"
            android:gravity="center"
            android:inputType="phone"
            android:text="+98"
            android:textColor="@color/black"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/edittext_phone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            android:backgroundTint="@color/Transparent"
            android:clickable="true"
            android:contentDescription="no"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/vazir"
            android:gravity="left|center"
            android:inputType="phone"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:textSize="22dp" />


    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_phone"
        app:layout_constraintVertical_bias="0.032">

        <TextView
            android:id="@+id/textViewu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/vazir"
            android:text="@string/accept_rules_2"
            android:textColor="@color/black"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/west"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/west"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginEnd="8dp"
            android:autoLink="web"
            android:clickable="true"
            android:fontFamily="@font/vazir"
            android:linksClickable="true"
            android:text="@string/accept_rules_1"
            android:textColor="@color/black"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textVsiewu"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textVsiewu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:fontFamily="@font/vazir"
            android:text="@string/accept_rules"
            android:textColor="@color/black"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/primary_blue"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_right" />


</androidx.constraintlayout.motion.widget.MotionLayout>