<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/linear_home_main"
        android:visibility="gone"
        android:background="@color/primary_blue"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginTop="30dp"
            android:layout_marginLeft="25dp"
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:fontFamily="@font/vazir_bold"
            android:layout_height="45dp"
            android:layout_weight="7"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <ImageView
            android:layout_marginTop="41dp"
            android:layout_marginRight="27dp"
            android:id="@+id/imageView3"
            android:layout_width="18dp"
            android:layout_height="20dp"
            android:src="@mipmap/notif"
            />
    </LinearLayout>

    <TextView
        android:layout_marginRight="23dp"
        android:id="@+id/textView5_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vazir_bold"
        android:text="خوش اومدی، مهرشاد"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_gravity="right"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="23dp"
        android:fontFamily="@font/vazir"
        android:text="@string/lets_go"
        android:textColor="#CBCBD4"
        android:textSize="16sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:paddingTop="15dp"
        android:id="@+id/aghahiha"
        android:paddingHorizontal="5dp"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cardstyle5"
        android:orientation="vertical" />
    </LinearLayout>













    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:id="@+id/constraint_home_loading"
        android:visibility="visible"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/car_load" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vazir"
            android:textColor="@color/gray_60"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="40dp"
            android:text="@string/wait"
            android:gravity="center"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView"
            app:layout_constraintVertical_bias="0.593" />
    </androidx.constraintlayout.widget.ConstraintLayout>






</LinearLayout>