<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:scaleType="fitXY"
        android:src="@mipmap/profile_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_picture"
        android:layout_width="116dp"
        android:layout_height="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="172dp"
       android:src="@mipmap/profile_header" />

    <TextView
        android:id="@+id/following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:fontFamily="@font/vazir"
        android:textColor="@color/primary_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:layout_marginTop="15sp"/>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following"
        android:fontFamily="@font/vazir"
        android:textColor="@color/gray_60"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@id/profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/following"/>

    <TextView
        android:id="@+id/followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:fontFamily="@font/vazir"
        android:textColor="@color/primary_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/profile_picture"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        android:fontFamily="@font/vazir"
        android:textColor="@color/gray_60"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/profile_picture"
        app:layout_constraintTop_toBottomOf="@id/followers"/>

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="شایان کیوانی"
        android:fontFamily="@font/vazir_bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/id_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="\@dsfgdfhdfhn"
        android:fontFamily="@font/vazir"
        android:textColor="@color/gray_60"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_name"
        android:layout_marginTop="6dp"/>

    <TextView
        android:id="@+id/about_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="عشق سفر . در جست و جوی مکان های خاص
دی ماهی مغرور"
        android:gravity="center"
        android:maxLength="200"
        android:maxWidth="215dp"
        android:fontFamily="@font/vazir"
        android:textColor="@color/gray_60"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_name"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/edit_profile"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_me"
        android:text="@string/edit_profile"
        android:fontFamily="@font/vazir"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/cardstyle1"
        />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travels"
        android:fontFamily="@font/vazir_bold"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_profile"
        android:layout_marginTop="32dp"
        android:layout_marginRight="22dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="409dp"
        android:layout_height="161dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView20"
        tools:layout_editor_absoluteY="569dp" />
</androidx.constraintlayout.widget.ConstraintLayout>